# toki-sama

./: Cargo.toml  README.md
data/: compounds.txt  generated_day2.tsv  nimi_pu.txt  pu.csv  toki-sama.aseprite
ilo-sona/: Cargo.toml
ilo_sona/: Cargo.toml
ilo_sona/src/: analysis.rs  main.rs  parsing.rs
pages/: 1.js  index.html  index.js  style.css
src/: main.rs  pu.rs  toki_sama.rs
toki-sama/: Cargo.toml
toki_sama/: Cargo.toml
toki_sama/src/: lib.rs  pu.rs
toki_sama_console/: Cargo.toml
toki_sama_console/src/: main.rs
web_client/: Cargo.toml  package-lock.json  webpack.config.js
web_client/js/: bootstrap.js  index.js
web_client/src/: lib.rs
web_client/static/: index.html  style.css
